[package]
name = "avalon"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-sdk = "3.0.1"
clap = {version = "4.4.18", features = [ "derive"]}
futures = "0.3.30"
libp2p = {version = "0.53.2", features = ["full", "identity", "kad", "json", "secp256k1", "ping", "mdns", "serde", "tcp", "tokio", "gossipsub"]}
tokio = { version = "1.35.1", features = ["full", "macros"]}
