[package]
name = "avalon"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ckb-sdk = "3.0.1"
clap = {version = "4.4.18", features = [ "derive"]}
futures = "0.3.30"
libp2p = {version = "0.53.2", features = ["full", "tls", "dns", "async-std", "noise", "yamux", "websocket", "macros", "request-response", "identify", "kad", "cbor", "json", "secp256k1", "ping", "mdns", "serde", "tcp", "tokio", "gossipsub"]}
tokio = { version = "1.35.1", features = ["full", "macros"]}
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
either = "1.9"
tracing = "0.1.37"
void = "1.0.2"
ethers = "2.0.11"
serde_json = "1.0.113"
libp2p-autonat = "0.12.0"
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
warp = "0.3.6"
bech32 = "0.9.1"
axum = "0.7.4"
tower-http = {version = "0.5.1", features = ["full"]}
hyper = "1.1.0"
tower = "0.4.13"
diesel = "2.1.4"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }

